a change is made

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h3 style="text-align: center; color: red; background-color: aquamarine;">Learning github with Harry</h3>
-</body>
+    <p> This new feture us added into
+        feture2 branch
+    </p>
+</bodkkkkkkky>
 </html>
